# LangChainNoteBook

./: README.md  install_langchain.sh  main.py  pyproject.toml
app/: README.MD  main.py
app/api/routes/: chat.py  test.py
app/chains/: base_chain.py  chain_factory.py  memory_chain.py  stateless_chain.py  tool_chain.py
app/config/: model_config.py  tool_config.py
app/models/: chat_models.py
app/services/: chat_service.py  model_factory.py  test_service.py  tool_calling_service.py
app/tools/: base_tools.py  tool_manager.py
docs/: Notice.md  dep_version.md
examples/: tool_calling_example.py
front/: darwinGpt.html
langGraph/: overall.md
langchain/: overall.md
langchain/Chains/: LCELChain.ipynb  TraditionalChain.ipynb
langchain/agent/: agent.ipynb  agentDemo.ipynb  ai_info.txt
langchain/chains/: LCELChain.ipynb
langchain/dataConnection/: DocumentLoader.ipynb  EmbeddingModels.ipynb  Retrievers.ipynb  TextSplitters.ipynb  VectorStores.ipynb  dataConnetction.ipynb  employees.csv  sample.csv  sample.json  sample.txt
langchain/dataConnection/chroma_db/: chroma.sqlite3
langchain/dataConnection/docs/: doc_0.txt  doc_1.txt  doc_2.txt
langchain/dataConnection/faiss_index/: index.faiss  index.pkl
langchain/memory/: chains_momery_chat.ipynb
langchain/modelIo/: ChatModel.ipynb  LLMs.ipynb  MessageTypes.ipynb  StructOutput.ipynb
langchain/prompt/: Prompt.ipynb
langchain/tool/: tool.ipynb
memoryChat/: LCEL_memory_chat.ipynb  LangGraph_memory_chat.ipynb  memory.ipynb
