[project]
name = "langchainnotebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "faiss-cpu>=1.11.0.post1",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "jq>=1.10.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.5",
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-ollama>=0.2.0",
    "langchain-text-splitters>=0.3.0,<0.4.0",
    "langgraph>=0.2.20,<0.3",
    "langgraph-checkpoint>=2.0.0",
    "langsmith>=0.1.0",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.9.0",
]
