[project]
name = "langchainnotebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "jq>=1.10.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.5",
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.0,<0.4.0",
    "langgraph>=0.2.20,<0.3",
    "langgraph-checkpoint>=2.0.0",
    "langsmith>=0.1.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
    "pdfminer-six>=20250506",
    "pdfplumber>=0.11.7",
    "pypdf>=5.8.0",
    "pytest>=8.4.1",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.9.0",
    "uvicorn[standard]>=0.35.0",
]
